client/src/components/Burger/Burger.module.css
.Burger {
  width: 30%;
  /* margin: auto; */
  /* height: 100%; */
  overflow-y: scroll;
  text-align: center;
  font-weight: bold;
  font-size: 1.2rem;
  direction: rtl;
  transition: all 0.2s linear;
  scrollbar-width: none;
  /* margin: auto; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  /* flex-wrap: wrap; */


  
}

/* Fixes scrolling after too many ingredients added */

.BurgerScrolled {
    width: 30%;
    /* margin: auto; */
    /* height: 100%; */
    overflow-y: scroll;
    text-align: center;
    font-weight: bold;
    font-size: 1.2rem;
    direction: rtl;
    transition: all 0.2s linear;
    scrollbar-width: none;
    /* margin: auto; */
    display: flex;
    flex-direction: column;


}


@media(max-width: 598px) {
  .BurgerScrolled {
    justify-content: center;

  }
}

.AddIngsText {
  color: white;
  font-family: 'DancingScript-VariableFont_wght';
}

Burger::-webkit-scrollbar {
  width: 0px;
  background: transparent; /* make scrollbar transparent */
}

